# SonicCrush

./: .gitignore  .gitmodules  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  run_tests.sh
docs/: AudioEffectParameter.txt
src/: AudioEffectParameter.cpp  AudioEffectParameter.hpp  EffectChain.cpp  EffectChain.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/AudioEffects/: AudioEffect.hpp  CustomDistortionEquation.cpp  CustomDistortionEquation.h  CustomDistortionEquation.hpp  SawToothClipping.cpp  SawToothClipping.hpp  SquareClipping.cpp  SquareClipping.hpp  TripleSmoothingDistortion.cpp  TripleSmoothingDistortion.h  TripleSmoothingDistortion.hpp
src/Enums/: AudioEffectNames.cpp  AudioEffectNames.def  AudioEffectNames.hpp
tests/: EffectChain.cpp
tests/AudioEffects/: CustomDistortionEquation.cpp  TripleSmoothingDistortion.cpp
tests/integration/: EffectChain.cpp
tests/mocks/: MockAudioProcessor.hpp
tests/unit/: AudioEffectParameter.cpp  EffectChain.cpp
tests/unit/AudioEffects/: CustomDistortionEquation.cpp  SawToothClipping.cpp  SquareClipping.cpp  TripleSmoothingDistortion.cpp
tests/unit/Enums/: AudioEffectNames.cpp
